tests/ui/traits/const-traits/const-drop-fail-2.precise.stderr
error[E0277]: the trait bound `ConstDropImplWithBounds<NonTrivialDrop>: const Destruct` is not satisfied
  --> $DIR/const-drop-fail-2.rs:31:15
   |
LL |   const _: () = check::<ConstDropImplWithBounds<NonTrivialDrop>>(
   |  _______________^
LL | |
LL | |     ConstDropImplWithBounds(PhantomData)
LL | | );
   | |_^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
